<resources>
    <string name="app_name">Loovie</string>
    <string name="disclaimer">The images are from https://www.movieposters.com/</string>
    <string name="btm_menu">Menu</string>
    <string name="btn_favorites">Favorites</string>
    <string name="btn_watch_later">Watch later</string>
    <string name="btn_selections">Selections</string>
    <string name="btn_settings">Settings</string>
    <string name="page_title">Look for It!</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_favorites_title">Favorites</string>
    <string name="menu_watch_later_title">Watch later</string>
    <string name="menu_selections_title">Selections</string>
    <string name="collateral_beauty_desc">
        is a 2016 American fantasy drama film directed by David Frankel and written by Allan Loeb. The film stars an ensemble cast of Will Smith, Edward Norton, Keira Knightley, Michael Peña, Naomie Harris, Jacob Latimore, Kate Winslet and Helen Mirren. It follows on Howard Inlet, a successful New York advertising executive who suffers a great tragedy, retreats from life where he seeks answers from the universe by writing letters to Love, Time, and Death. Receiving unexpected personal responses, he begins to see how these things interlock and how even loss can reveal moments of meaning and beauty. Collateral Beauty premiered at the Dubai International Film Festival on December 13, 2016, and was released in the United States on December 16, 2016. It was panned by critics, but grossed $88 million worldwide against its net $36 million budget.
    </string>
    <string name="a_beautiful_mind_desc">
        is a 2001 American biographical drama film based on the life of the American mathematician John Nash, a Nobel Laureate in Economics and Abel Prize winner. The film was directed by Ron Howard, from a screenplay written by Akiva Goldsman. It was inspired by the bestselling, Pulitzer Prize-nominated 1997 book of the same name by Sylvia Nasar. The film stars Russell Crowe as Nash, along with Ed Harris, Jennifer Connelly, Paul Bettany, Adam Goldberg, Judd Hirsch, Josh Lucas, Anthony Rapp, and Christopher Plummer in supporting roles. The story begins in Nash\'s days as a graduate student at Princeton University. Early in the film, Nash begins to develop paranoid schizophrenia and endures delusional episodes while watching the burden his condition brings on his wife Alicia and friends. A Beautiful Mind was released theatrically in the United States on December 21, 2001. It went on to gross over $313 million worldwide and won four Academy Awards, for Best Picture, Best Director, Best Adapted Screenplay and Best Supporting Actress. It was also nominated for Best Actor, Best Film Editing, Best Makeup, and Best Original Score.
    </string>
    <string name="motherless_brooklyn_desc">
        is a novel by Jonathan Lethem that was first published in 1999. The story is set in Brooklyn, and follows Lionel Essrog, a detective who has Tourette\'s, a disorder marked by involuntary tics. Essrog works for Frank Minna, a small-time neighborhood owner of a "seedy and makeshift" detective agency. Together, Essrog and three other characters—Tony, Danny, and Gilbert—call themselves "the Minna Men". Actor and filmmaker Edward Norton acquired the film rights almost immediately after the book was published. However, production started only in February 2018. Norton wrote, produced, directed and starred together with Willem Dafoe, Bruce Willis, Gugu Mbatha-Raw, and Alec Baldwin. The film differs significantly from the book, which Lethem explained as "It\’s as if the book was a dream the movie once had and was trying to remember it, you know?" Regarding the transposition of the story from the book\'s contemporary time to the fifties, and Lethem\'s very literal interpretation of neo-noir characters, Lethem said "The alchemical quality of the written word makes it okay. But if you start photographing that, it\’s going to look like Halloween, like they\’re dressing up."
    </string>
    <string name="black_swan_desc">
        Black Swan is a 2010 American psychological thriller film directed by Darren Aronofsky from a screenplay by Mark Heyman, John McLaughlin, and Andres Heinz, based on a story by Heinz. The film stars Natalie Portman, Vincent Cassel, Mila Kunis, Barbara Hershey, and Winona Ryder, and revolves around a production of Tchaikovsky\'s Swan Lake ballet by the New York City Ballet company. The production requires a ballerina to play the innocent and fragile White Swan, for which the committed dancer Nina Sayers (Portman) is a perfect fit, as well as the dark and sensual Black Swan, which are qualities better embodied by the new rival Lily (Kunis). Nina is overwhelmed by a feeling of immense pressure when she finds herself competing for the role, causing her to lose her tenuous grip on reality and descend into madness. Aronofsky conceived the premise by connecting his viewings of a production of Swan Lake with an unrealized screenplay about understudies and the notion of being haunted by a double, similar to the folklore surrounding doppelgängers. Aronofsky cites Fyodor Dostoevsky\'s The Double as another inspiration for the film.
    </string>
    <string name="catch_me_if_you_can_desc">
        is a 2002 American biographical crime film directed and produced by Steven Spielberg from a screenplay by Jeff Nathanson and starring Leonardo DiCaprio, Tom Hanks, Christopher Walken, Martin Sheen, and Nathalie Baye. The film is based on the autobiography of Frank Abagnale, who allegedly, before his 19th birthday, successfully performed cons worth millions of dollars by posing as a Pan American World Airways pilot, a Georgia doctor, and a Louisiana parish prosecutor. The truth of his story is questionable. Development for the film began in 1980 but dragged on until 1997, when Spielberg\'s DreamWorks bought the film rights to Abagnale\'s 1980 book of the same name. David Fincher, Gore Verbinski, Lasse Hallström, Miloš Forman, and Cameron Crowe were all considered to direct the film before Spielberg decided to direct it himself. Filming took place from February to May 2002.
    </string>
    <string name="carlitos_way_desc">
       is a 1993 American crime drama film directed by Brian De Palma, based on the novels Carlito\'s Way (1975) and After Hours (1979) by Judge Edwin Torres. The film adaptation was scripted by David Koepp. It stars Al Pacino, Sean Penn, Penelope Ann Miller, Luis Guzman, John Leguizamo, Jorge Porcel, Joseph Siravo, and Viggo Mortensen. The film stars Pacino as Carlito Brigante, a Puerto Rican criminal who vows to go straight and to retire in paradise. However, his criminal past proves difficult to escape, and he unwittingly ends up being dragged into the same activities that got him imprisoned in the first place. The film is based mainly on After Hours, but used the title of the first novel to avoid it being confused with Martin Scorsese\'s 1985 film of the same name. This is the second film collaboration between Pacino and De Palma, after 1983\'s film, Scarface.
   </string>
    <string name="young_sheldon_desc">
        Young Sheldon is an American coming-of-age sitcom television series for CBS created by Chuck Lorre and Steven Molaro. The series, set in the late 1980s and early 1990s, is a spin-off prequel to The Big Bang Theory and begins with the character Sheldon Cooper at the age of nine, living with his family in East Texas and going to high school. Iain Armitage stars as young Sheldon, alongside Zoe Perry, Lance Barber, Montana Jordan, Raegan Revord, and Annie Potts. Matt Hobby was promoted to the main cast starting with the third season. Jim Parsons, who portrays the adult Sheldon Cooper on The Big Bang Theory, narrates the series and serves as an executive producer. Development of the prequel series began in November 2016, from an initial idea that Parsons passed along to The Big Bang Theory producers. The following March, Armitage and Perry were cast, and the series was ordered by CBS. Young Sheldon premiered as a special preview on September 25, 2017, and was picked up for a full season that began airing weekly from November 2, 2017. In March 2021, CBS renewed the series for a fifth, sixth and seventh season. The fifth season premiered on October 7, 2021.
    </string>
    <string name="million_dollar_baby_desc">
        is a 2004 American sports drama film directed, co-produced, scored by and starring Clint Eastwood from a screenplay written by Paul Haggis, based on short stories by F.X. Toole, the pen name of fight manager and cutman Jerry Boyd. It also stars Hilary Swank, and Morgan Freeman. The film follows Margaret "Maggie" Fitzgerald (Swank), an underdog amateur boxer who is helped by an underappreciated boxing trainer (Eastwood) to achieve her dream of becoming a professional. Million Dollar Baby was theatrically released on December 15, 2004, by Warner Bros. Pictures. It received critical acclaim and grossed $216.8 million worldwide. The film garnered seven nominations at the 77th Academy Awards and won four: Best Picture, Best Director, Best Actress (for Swank), and Best Supporting Actor (for Freeman).
    </string>
    <string name="the_big_lebowski_desc">
        is a 1998 black comedy crime film written, produced, and directed by Joel and Ethan Coen. It stars Jeff Bridges as Jeffrey "The Dude" Lebowski, a Los Angeles slacker and avid bowler. He is assaulted as a result of mistaken identity, then learns that a millionaire also named Jeffrey Lebowski (David Huddleston) was the intended victim. The millionaire Lebowski\'s trophy wife is kidnapped, and he commissions The Dude to deliver the ransom to secure her release; the plan goes awry when the Dude\'s friend Walter Sobchak (John Goodman) schemes to keep the ransom money. Sam Elliott, Julianne Moore, Steve Buscemi, John Turturro, Philip Seymour Hoffman, Tara Reid, David Thewlis, Peter Stormare, and Ben Gazzara also appear, in supporting roles. The film is loosely inspired by the work of Raymond Chandler. Joel Coen stated, "We wanted to do a Chandler kind of story – how it moves episodically, and deals with the characters trying to unravel a mystery, as well as having a hopelessly complex plot that\'s ultimately unimportant." The original score was composed by Carter Burwell, a longtime collaborator of the Coen brothers.
    </string>
    <string name="coco_desc">
        is a 2017 American computer-animated fantasy film produced by Pixar Animation Studios and released by Walt Disney Pictures. Based on an original idea by Lee Unkrich, it is directed by him and co-directed by Adrian Molina. The film\'s voice cast stars Anthony Gonzalez, Gael García Bernal, Benjamin Bratt, Alanna Ubach, Renée Victor, Ana Ofelia Murguía and Edward James Olmos. The story follows a 12-year-old boy named Miguel who is accidentally transported to the Land of the Dead, where he seeks the help of his deceased musician great-great-grandfather to return him to his family among the living and to reverse his family\'s ban on music. The concept for Coco is inspired by the Mexican holiday Day of the Dead. The film was scripted by Molina and Matthew Aldrich from a story by Unkrich, Jason Katz, Aldrich, and Molina. Pixar began developing the animation in 2016; Unkrich and some of the film\'s crew visited Mexico for research. Composer Michael Giacchino, who had worked on prior Pixar animated features, composed the score. With a cost of $175–225 million, Coco is the first film with a nine-figure budget to feature an all-Latino principal cast.
    </string>
</resources>