<?xml version="1.0" encoding="utf-8"?>

<!-- Menu for navigation menu (on the bottom) -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/menu_favorites_title"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_baseline_access_time_filled_24"
        android:title="@string/menu_watch_later_title"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/selections"
        android:icon="@drawable/ic_baseline_video_library_24"
        android:title="@string/menu_selections_title"
        app:showAsAction="withText"/>
</menu>