<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- container for buttons -->
    <LinearLayout
        android:id="@+id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_actionbar"
        app:layout_constraintTop_toBottomOf="@+id/top_actionbar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/corner_button_background">

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btm_menu"/>

        <Button
            android:id="@+id/btn_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_favorites"/>

        <Button
            android:id="@+id/btn_watch_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_watch_later"/>

        <Button
            android:id="@+id/btn_selections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_selections"/>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_settings"/>

    </LinearLayout>

    <!-- top action bar -->
    <androidx.cardview.widget.CardView
        android:id="@+id/top_actionbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rain_man"
                android:scaleType="centerCrop"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bad_boys"
                android:scaleType="centerCrop"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bohemian_phapsody"
                android:scaleType="centerCrop"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/the_hunger_games_mockingjay_part1"
                android:scaleType="centerCrop"
                android:layout_weight="1"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/top_actionbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:linksClickable="true"/>

    <!-- bottom action bar-->
    <FrameLayout
    android:id="@+id/bottom_actionbar"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="#00DAC5">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>